@@ -12,6 +12,7 @@ New features:
  - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 
 Bug fixes:
+ - [ZBX-3329] fixed shown last value as "0" in frontend for items that have never been updated (Aly)
  - [ZBX-3436] added missing "Primary POC Screen Name" to Inventory->Hosts (KB)
  - [ZBX-3405] fixed value_type for response code and failed step items when create webcheck (Vedmak)
  - [ZBX-3363] fixed possible crash of server while processing of {HOST.CONN}, {IPADDRESS} and {HOST.DNS} macros (Sasha)
